--- a/wiki/Announcement.wiki
+++ b/wiki/Announcement.wiki
@@ -1,6 +1,6 @@
 #labels Featured
 =New Names For Pages In Trunk=
-#sidebar TableOfContents 
+#sidebar Announcment
 
 I've renamed the page structure in the trunk.
 You will see this change in future trunk versions.
